--- a/distribution/npm/package.json
+++ b/distribution/npm/package.json
@@ -1,6 +1,6 @@
 {
   "name": "go-helloworld",
-  "version": "0.0.1",
+  "version": "__VERSION__",
   "description": "Testing out go-npm",
   "main": "index.js",
   "dependencies": {
