--- a/distribution/npm/package.json
+++ b/distribution/npm/package.json
@@ -1,10 +1,11 @@
 {
   "name": "go-helloworld",
-  "version": "__VERSION__",
+  "version": "0.0.10",
   "description": "Testing out go-npm",
   "main": "index.js",
   "scripts": {
-    "install": "go-npm"
+    "postinstall": "go-npm install",
+    "preuninstall": "go-npm uninstall"
   },
   "goBinary": {
     "name": "go-helloworld",
